src/sass/wiki/_toc.scss
/* Table of content */

#bodyContent #toc {
	display: none;
}

#toc-sidebar {
  padding: 4rem 0;
}

#toc {
	position: sticky;
	top: 0;
	font-size: $font-size-sm;
	max-height: 100vh;

	a {
		color: inherit;
		opacity: 0.5;
	}

	a:hover {
		opacity: 1;
	}

	ul {
		list-style: none;
		margin: 0;
		padding: 0;

		ul {
			padding-left: 1rem;
		}

		> li {
			margin-bottom: 0.25em;

			> ul {
				margin-top: 0.25em;
			}

			&.toclevel-1 {
				margin-bottom: 0.5em;

				> ul {
					margin-top: 0.5em;
				}
			}

			> a {
				display: flex;
			}
		}
	}
}

#toctitle {
	display: none;
}

.tocnumber {
	display: inline-block;
	min-width: 1em;
	margin-right: 0.5em;
}

.toclevel-2 > a > .tocnumber {
	min-width: 2em;
}

